# apexplane-control

./: .ansible-lint.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml  galaxy.yml  pyproject.toml  requirements.yml
.github/workflows/: check.yml
.taskfiles/: app.yml  root.yml
docs/: port-conventions.md  role-contracts.md
docs/development/: conventions.md
docs/shared/: README.md
roles/alloy/: README.md
roles/app_stack/: README.md
roles/assessment/: README.md
roles/audit/: README.md
roles/backups/: README.md
roles/base_autoupdates/: README.md
roles/base_bootstrap/: README.md
roles/base_hardening/: README.md
roles/base_logging/: README.md
roles/base_packages/: README.md
roles/base_swap/: README.md
roles/base_updates/: README.md
roles/cadvisor/: README.md
roles/certbot/: README.md
roles/crontab/: README.md
roles/crowdsec/: README.md
roles/dnsmasq/: README.md
roles/docker/: README.md
roles/docker_alertmanager/: README.md
roles/docker_ctop/: README.md
roles/docker_dockhand/: README.md
roles/docker_elastic/: README.md
roles/docker_engine_events_exporter/: README.md
roles/docker_gitlab_runner/: README.md
roles/docker_grafana/: README.md
roles/docker_jaeger/: README.md
roles/docker_loki/: README.md
roles/docker_mailpit/: README.md
roles/docker_minio/: README.md
roles/docker_nats/: README.md
roles/docker_nexus/: README.md
roles/docker_postgres/: README.md
roles/docker_prometheus/: README.md
roles/docker_rabbit/: README.md
roles/docker_redis/: README.md
roles/docker_sonarqube/: README.md
roles/docker_swarm/: README.md
roles/docker_swarm_alloy/: README.md
roles/docker_swarm_dockhand/: README.md
roles/docker_swarm_dokploy/: README.md
roles/docker_swarm_gramax/: README.md
toolkit/: Taskfile.yml  check_repo_sync.py  provision.yml  tunnel.yml
(+556 files in other folders)
