[project]
name = "apexplane-ansible-roles"
version = "1.0.0"
description = "ApexPlane reusable Ansible roles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.12.0",
    "ansible-core>=2.18.0,<2.19.0",
    "netaddr>=1.3.0",
    "passlib>=1.7.4",
]

[dependency-groups]
ci = [
    "ansible-lint>=25.9.2",
    "j2lint>=1.2.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.13",
    "ty>=0.0.13",
]

dev = [
    "pytest>=8.0.0",
]

[tool.uv]
default-groups = ["ci", "dev"]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:invalid escape sequence '\\\\d':DeprecationWarning:jinja2\\.lexer",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C901",    # complex-structure
  "COM812",  # missing-trailing-comma
  "D100",    # undocumented-public-module
  "D101",    # undocumented-public-class
  "D102",    # undocumented-public-method
  "D103",    # undocumented-public-function
  "D107",    # undocumented-public-init
  "D203",    # incorrect-blank-line-before-class
  "D213",    # multi-line-summary-second-line
  "E501",    # line-too-long
  "EM101",   # raw-string-in-exception
  "EM102",   # f-string-in-exception
  "ERA001",  # commented-out-code
  "G004",    # logging-f-string
  "INP001",  # implicit-namespace-package
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0915", # too-many-statements
  "S324",    # hashlib-insecure-hash-function
  "S608",    # hardcoded-sql-expression
  "TRY002",  # raise-vanilla-class
  "TRY003",  # raise-vanilla-args
  "TRY301",  # raise-within-try
]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["S101"]
"test_*.py" = ["S101"]
